compiler/testData/diagnostics/tests/thisAndSuper/superInExtensionFunction.fir.kt
fun String.f() {
    <!SUPER_NOT_AVAILABLE!>super@f<!>.compareTo("")
    <!SUPER_NOT_AVAILABLE!>super<!>.compareTo("")
}
